// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  aria-label="foo/bar.ts"
  className="issue-source-viewer-header display-flex-row display-flex-space-between"
  role="separator"
>
  <div
    className="display-flex-center flex-1"
  >
    <div
      className="spacer-right"
    >
      <a
        className="link-no-underline"
        href="/dashboard?id=my-project"
      >
        <QualifierIcon
          qualifier="TRK"
        />
         
        <span>
          MyProject
        </span>
      </a>
    </div>
    <div
      className="spacer-right"
    >
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        foo/
      </span>
      <span
        className="component-name-file"
      >
        bar.ts
      </span>
    </div>
    <div
      className="spacer-right"
    >
      <ClipboardIconButton
        aria-label="source_viewer.click_to_copy_filepath"
        className="button-link link-no-underline"
        copyValue="foo/bar.ts"
      />
    </div>
  </div>
  <div
    className="flex-0 big-spacer-left"
  >
    <ForwardRef(Link)
      to={
        {
          "hash": "",
          "pathname": "/project/issues",
          "search": "?files=foo%2Fbar.ts&resolved=false&id=my-project",
        }
      }
    >
      source_viewer.view_all_issues
    </ForwardRef(Link)>
  </div>
  <DeferredSpinner
    className="little-spacer-right"
  >
    <div
      className="flex-0 big-spacer-left"
    >
      <ButtonIcon
        aria-label="source_viewer.expand_all_lines"
        className="js-actions"
        onClick={[MockFunction]}
      >
        <ExpandSnippetIcon />
      </ButtonIcon>
    </div>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly: no link to project 1`] = `
<div
  aria-label="foo/bar.ts"
  className="issue-source-viewer-header display-flex-row display-flex-space-between"
  role="separator"
>
  <div
    className="display-flex-center flex-1"
  >
    <div
      className="spacer-right"
    >
      <QualifierIcon
        qualifier="TRK"
      />
       
      <span>
        MyProject
      </span>
    </div>
    <div
      className="spacer-right"
    >
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        foo/
      </span>
      <span
        className="component-name-file"
      >
        bar.ts
      </span>
    </div>
    <div
      className="spacer-right"
    >
      <ClipboardIconButton
        aria-label="source_viewer.click_to_copy_filepath"
        className="button-link link-no-underline"
        copyValue="foo/bar.ts"
      />
    </div>
  </div>
  <div
    className="flex-0 big-spacer-left"
  >
    <ForwardRef(Link)
      to={
        {
          "hash": "",
          "pathname": "/project/issues",
          "search": "?files=foo%2Fbar.ts&resolved=false&id=my-project",
        }
      }
    >
      source_viewer.view_all_issues
    </ForwardRef(Link)>
  </div>
  <DeferredSpinner
    className="little-spacer-right"
  >
    <div
      className="flex-0 big-spacer-left"
    >
      <ButtonIcon
        aria-label="source_viewer.expand_all_lines"
        className="js-actions"
        onClick={[MockFunction]}
      >
        <ExpandSnippetIcon />
      </ButtonIcon>
    </div>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly: no project name 1`] = `
<div
  aria-label="foo/bar.ts"
  className="issue-source-viewer-header display-flex-row display-flex-space-between"
  role="separator"
>
  <div
    className="display-flex-center flex-1"
  >
    <div
      className="spacer-right"
    >
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        foo/
      </span>
      <span
        className="component-name-file"
      >
        bar.ts
      </span>
    </div>
    <div
      className="spacer-right"
    >
      <ClipboardIconButton
        aria-label="source_viewer.click_to_copy_filepath"
        className="button-link link-no-underline"
        copyValue="foo/bar.ts"
      />
    </div>
  </div>
  <div
    className="flex-0 big-spacer-left"
  >
    <ForwardRef(Link)
      to={
        {
          "hash": "",
          "pathname": "/project/issues",
          "search": "?files=foo%2Fbar.ts&resolved=false&id=my-project",
        }
      }
    >
      source_viewer.view_all_issues
    </ForwardRef(Link)>
  </div>
  <DeferredSpinner
    className="little-spacer-right"
  >
    <div
      className="flex-0 big-spacer-left"
    >
      <ButtonIcon
        aria-label="source_viewer.expand_all_lines"
        className="js-actions"
        onClick={[MockFunction]}
      >
        <ExpandSnippetIcon />
      </ButtonIcon>
    </div>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly: project root 1`] = `
<div
  aria-label="foo/bar.ts"
  className="issue-source-viewer-header display-flex-row display-flex-space-between"
  role="separator"
>
  <div
    className="display-flex-center flex-1"
  >
    <div
      className="spacer-right"
    >
      <a
        className="link-no-underline"
        href="/dashboard?id=my-project"
      >
        <QualifierIcon
          qualifier="TRK"
        />
         
        <span>
          MyProject
        </span>
      </a>
    </div>
  </div>
  <DeferredSpinner
    className="little-spacer-right"
  >
    <div
      className="flex-0 big-spacer-left"
    >
      <ButtonIcon
        aria-label="source_viewer.expand_all_lines"
        className="js-actions"
        onClick={[MockFunction]}
      >
        <ExpandSnippetIcon />
      </ButtonIcon>
    </div>
  </DeferredSpinner>
</div>
`;
